# LiveSecBench

./: .gitignore  README.md  README_EN.md  pyproject.toml  requirements.txt
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  RESULT_FORMAT.md  USER_GUIDE.md
livesecbench/: run_livesecbench.py
livesecbench/configs/: mock_e2e.yaml  run_custom_safety_benchmark.yaml
livesecbench/core/: rank.py  report.py  run_model_answer.py  run_scoring.py  task_manager.py
livesecbench/infra/: __init__.py  batch_processor.py  cache_manager.py  http_client.py
livesecbench/infra/config/: __init__.py  config_manager.py
livesecbench/infra/scoring/: __init__.py  convergence_detector.py  pairing_strategies.py  rating_algorithms.py  scoring_orchestrator.py
livesecbench/question_set/factuality/: sample_data.json
livesecbench/scorers/: model_based_scorer.py
livesecbench/storage/: sqlite_storage.py
livesecbench/utils/: __init__.py  env_loader.py  logger.py
scripts/: run_mock_e2e.py
tests/: __init__.py  test_cache_manager.py  test_config_manager.py  test_convergence_detector.py  test_http_client.py  test_pairing_strategies.py  test_rating_algorithms.py
